@@ -2662,6 +2662,9 @@ sub guild_allies_enemy_list {
 	my $msg = $args->{RAW_MSG};
 	my $len = unpack("v", substr($msg, 2, 2));
 
+	# clear $guild{enemy} and $guild{ally} otherwise bot will misremember alliances -zdivpsa
+	$guild{enemy} = $guild{ally} = {};
+
 	for (my $i = 4; $i < $len; $i += 32) {
 		my ($type, $guildID, $guildName) = unpack("V1 V1 Z24", substr($msg, $i, 32));
 		$guildName = bytesToString($guildName);
